--- a/first_entry.html
+++ b/first_entry.html
@@ -16,7 +16,14 @@
     <title>Betastore by damienle</title>
   </head>
   <body>
-    
+     <header>
+      <div class="inner">
+        <h1>Betastore</h1>
+        <h2>First Project</h2>
+        <a href="https://github.com/damienle/betastore" class="button"><small>View project on</small>GitHub</a>
+      </div>
+    </header>
+
     Hello World
   </body>
 
