--- a/first_entry.html
+++ b/first_entry.html
@@ -23,7 +23,11 @@
         <a href="https://github.com/damienle/betastore" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
-
-    Hello World
+<div id="content-wrapper">
+      <div class="inner clearfix">
+   <p>Hello World</p> 
+    
+    </div>
+    </div>
   </body>
 
